# CDataStructures

./: .gitignore  CMakeLists.txt  build.sh  cmake_install.cmake  hashmap.c  hashmap.h  list.h
include/: cdsl.h  cdstruct.h  hash.h  hashmap.h  list.h  siphash.h
src/: hash.c  hashmap.c  list.c
tests/: test_hashmap.c  test_list.c
